--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
-    "nock": "^10.0.0",
+    "@probot/serverless-lambda": "^0.3.0",
     "@types/nock": "^9.3.0",
+    "nock": "^10.0.0",
     "probot": "^7.2.0"
   },
   "devDependencies": {
